--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pool",
   "version": "0.1.0",
   "private": true,
+  "devServer": {
+    "host": "localhost",
+    "port": "8080"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
